# Force-Aware-Diffusion-Policy

./: .gitignore  CHANGELOG.md  CONVERSION_README.md  DATASET_FORMAT.md  DEPLOYMENT_VELOCITY_INPUT.md  FADP_FORCE_README.md  FADP_HORIZON_CONFIG.md  FADP_UMI_CONFIG_README.md  FORCE_DATA_FLOW.md  MANIFEST.in  README.md  TRAINING_GUIDE.md  analyze_checkpoints.py  convert_session_to_zarr.py  eval_real_robot.py  example_fadp_config.yaml  inspect_fadp_dataset.py  inspect_zarr.py  multirun_metrics.py  open_loop_evaluation.py  pyproject.toml  ray_train_multirun.py  requirements.txt  setup.py  test_fadp_model.py  test_fisheye_crop.py  test_umi_fadp_model.py  train.py  visualize_obs_future_force.py
diffusion_policy/: __init__.py
diffusion_policy/config/: train_diffusion_unet_fadp_force_workspace.yaml  train_diffusion_unet_timm_fadp_umi_workspace.yaml  train_diffusion_unet_timm_fadp_workspace.yaml  train_diffusion_unet_timm_umi_workspace.yaml
diffusion_policy/dataset/: fadp_dataset.py  fadp_umi_dataset.py
diffusion_policy/policy/: diffusion_unet_fadp_policy.py
diffusion_policy/workspace/: train_diffusion_unet_fadp_workspace.py  train_diffusion_unet_image_workspace.py
fadp/: __init__.py
fadp/common/: normalize_util.py  sampler.py
fadp/config/: train_diffusion_unet_ddim_hybrid_workspace.yaml  train_fadp.yaml  train_force_aware_diffusion_policy.yaml  train_force_aware_diffusion_policy_real.yaml
fadp/dataset/: base_dataset.py  fadp_dataset.py  real_pusht_image_dataset.py
fadp/env_runner/: base_image_runner.py  real_pusht_image_runner.py
fadp/gym_util/: video_recording_wrapper.py
fadp/policy/: base_image_policy.py  force_aware_diffusion_policy.py
fadp/real_world/: multi_camera_visualizer.py  multi_realsense.py  real_data_conversion.py  real_env.py  real_inference_util.py  rtde_interpolation_controller.py  single_realsense.py  spacemouse_shared_memory.py  video_recorder.py
fadp/scripts/: bet_blockpush_conversion.py  blockpush_abs_conversion.py  episode_lengths.py  generate_bet_blockpush.py  real_dataset_conversion.py  robomimic_dataset_conversion.py
fadp/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_ndarray.py
fadp/workspace/: train_force_aware_diffusion_policy_workspace.py
scripts/: README.md  convert_hdf5_to_fadp.py
tests/: test_cv2_util.py  test_multi_realsense.py  test_pose_trajectory_interpolator.py  test_precise_sleep.py  test_replay_buffer.py  test_ring_buffer.py  test_shared_queue.py  test_single_realsense.py  test_timestamp_accumulator.py
(+19 files in other folders)
